overlapping text and divs fixed

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -23,18 +23,19 @@
     h1 {
       font-size: 4rem;
       text-align: center;
-      line-height: 20px;
+      line-height: 4rem;
       color: white;
       @include media(">=phone", "<lgphone") {
         font-size: 1.5rem;
-        line-height: 10px;
+        line-height: 1.5rem;
       }
       @include media(">=lgphone", "<tablet") {
         font-size: 1.5rem;
-        line-height: 10px;
+        line-height: 1.5rem;
       }
       @include media(">=tablet", "<desktop") {
         font-size: 2.5rem;
+        line-height: 2.5rem;
       }
     }
   }
