--- a/src/styles/stars.scss
+++ b/src/styles/stars.scss
@@ -64,3 +64,9 @@
     background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
     height: 100vh;
 }
+
+@media only screen and (max-width: 767px) {
+  .bg-responsive {
+      height: auto;
+  }
+}
